everpal: rootdir: Update charger trigger for AIDL Health service
Change-Id: I473669c3b410f3dfad63aee7ef2de8e38e67fd89
Signed-off-by: Sushrut1101 <guptasushrut@gmail.com>

--- a/rootdir/etc/init.mt6833.rc
+++ b/rootdir/etc/init.mt6833.rc
@@ -17,7 +17,7 @@ on property:odm.display_hbm=2
 on property:odm.display_hbm=3
     write /sys/class/leds/lcd-backlight/hbm 3
 
-on charger
+on property:init.svc.vendor.charger=running
     start mi_thermald
 
 on property:ro.factory_mode=1 && property:sys.boot_completed=1
