--- a/rootdir/etc/init.batterysecret.rc
+++ b/rootdir/etc/init.batterysecret.rc
@@ -6,7 +6,7 @@ on property:sys.boot_completed=1
     chmod 0664 /sys/class/power_supply/bms/authentic
     start batterysecret
 
-on charger
+on property:init.svc.vendor.charger=running
     chmod 0664 /sys/class/usbpd/usbpd0/usbpd_verifed
     chmod 0664 /sys/class/usbpd/usbpd0/request_vdm_cmd
     chmod 0664 /sys/class/usbpd/usbpd0/verify_process
