everpal: Switch to AIDL NFC HAL
Change-Id: Id4c2115ca17f30fa1f13949637fead0e0d2f7eef
Signed-off-by: Sushrut1101 <guptasushrut@gmail.com>

--- a/rootdir/etc/init.stnfc.rc
+++ b/rootdir/etc/init.stnfc.rc
@@ -1,7 +1,8 @@
-service nfc_hal_service /vendor/bin/hw/android.hardware.nfc@1.2-service-st
+service nfc_hal_service /vendor/bin/hw/android.hardware.nfc-service.st
     class hal
     user nfc
     group nfc
+    override
     disabled
 
 on property:ro.boot.product.hardware.sku=nfc
